<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/status_bar_hight"
        android:background="@color/colorPrimaryDark">
        <ImageButton
            android:id="@+id/return_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/return_btn"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:text="@string/string_cut_audio"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="@dimen/text_medium_size"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"/>
    <RelativeLayout
        android:layout_marginTop="@dimen/dp_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorBlack"
        >

      <lm.com.audioextract.view.waveview.WaveformView
          android:id="@+id/waveform"
          android:layout_width="fill_parent"
          android:background="@color/grid_line"
          android:layout_height="100dp" />

      <lm.com.audioextract.view.waveview.MarkerView
          android:id="@+id/startmarker"
          android:nextFocusDown="@+id/endmarker"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/marker_left"
          android:contentDescription="@string/start_marker" />

      <lm.com.audioextract.view.waveview.MarkerView
          android:id="@+id/endmarker"
          android:nextFocusUp="@+id/startmarker"
          android:nextFocusDown="@+id/info"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/marker_right"
          android:contentDescription="@string/end_marker" />

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="62dip"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="@dimen/dp_5"
        android:gravity="center"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/mark_start"
            android:text="@string/start_label"
            android:textColor="#ffffffff"
            android:textSize="@dimen/text_medium_size"
            android:labelFor="@+id/starttext"
            android:clickable="true"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="31dip" />

        <EditText
            android:id="@+id/starttext"
            android:textSize="12sp"
            android:inputType="number|numberDecimal"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="30dip"
            android:layout_width="@dimen/dp_80"
            android:layout_height="@dimen/dp_40"
            android:textColor="@color/white"
            android:gravity="center" />

        <TextView
            android:id="@+id/mark_end"
            android:text="@string/end_label"
            android:textColor="#ffffffff"
            android:textSize="@dimen/text_medium_size"
            android:labelFor="@+id/endtext"
            android:clickable="true"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="31dip" />

        <EditText
            android:id="@+id/endtext"
            android:textSize="12sp"
            android:inputType="number|numberDecimal"
            android:layout_width="@dimen/dp_80"
            android:layout_height="@dimen/dp_40"
            android:layout_marginStart="10dip"
            android:textColor="@color/white"
            android:gravity="center" />

    </LinearLayout>
    <TextView
        android:id="@+id/info"
        android:nextFocusUp="@+id/endmarker"
        android:nextFocusDown="@+id/play"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@style/AudioFileInfoOverlayText"
        android:background="@color/colorPrimaryDark"

        android:gravity="center" />

    <LinearLayout
        android:background="@color/colorPrimaryDark"
         android:layout_width="fill_parent"
         android:layout_height="62dip"
         android:gravity="center" >

      <ImageButton
           android:id="@+id/rewind"
           android:layout_width="64dip"
           android:layout_height="52dip"
           android:layout_marginTop="6dip"
           android:layout_marginBottom="6dip"
          android:visibility="gone"
           style="@android:style/MediaButton"
           android:src="@android:drawable/ic_media_previous" />

      <ImageButton
           android:id="@+id/play"
           android:layout_width="71dip"
           android:layout_height="52dip"
           android:layout_marginTop="6dip"
           android:layout_marginBottom="6dip"
           style="@android:style/MediaButton"
           android:contentDescription="@string/play"
           android:src="@android:drawable/ic_media_play" />

      <ImageButton
           android:id="@+id/nextfwd"
           android:layout_width="64dip"
           android:layout_height="52dip"
           android:layout_marginEnd="5dip"
           android:layout_marginTop="6dip"
           android:layout_marginBottom="6dip"
           android:visibility="gone"
           style="@android:style/MediaButton"
           android:src="@android:drawable/ic_media_next" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/dp_150"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/saveaudio"
                android:layout_width="@dimen/dp_150"
                android:layout_height="@dimen/dp_50"
                android:background="@drawable/black_bg"
                android:text="@string/string_save"
                android:textSize="@dimen/text_big_size"
                android:textColor="@color/white"
                android:layout_centerInParent="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:visibility="gone"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/saveas_ring"
                android:layout_width="@dimen/dp_150"
                android:layout_height="@dimen/dp_50"
                android:background="@drawable/black_bg"
                android:text="@string/string_saveasring"
                android:textSize="@dimen/text_big_size"
                android:textColor="@color/white"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/reset_act"
                android:layout_width="@dimen/dp_150"
                android:layout_height="@dimen/dp_50"
                android:background="@drawable/black_bg"
                android:text="@string/string_reset"
                android:textSize="@dimen/text_big_size"
                android:textColor="@color/white"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
    </LinearLayout>


</LinearLayout>
