<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:waveview="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/status_bar_hight"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:text="@string/string_edit_audio"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="@dimen/text_medium_size"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0px"
        android:background="@color/colorPrimaryDark"
        android:layout_weight="1">

        <lm.com.audioextract.view.waveview.WaveformView
            android:id="@+id/audioWaveform"
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <lm.com.audioextract.view.waveview.MarkerView
            android:id="@+id/startmarker"
            android:nextFocusDown="@+id/endmarker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/marker_left"
            android:contentDescription="@string/start_marker" />

        <lm.com.audioextract.view.waveview.MarkerView
            android:id="@+id/endmarker"
            android:nextFocusUp="@+id/startmarker"
            android:nextFocusDown="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/marker_right"
            android:contentDescription="@string/end_marker" />

    </RelativeLayout>

</LinearLayout>