<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/status_bar_hight"
        android:background="@color/colorPrimaryDark">
        <ImageButton
            android:id="@+id/return_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@drawable/return_btn"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:text="@string/string_muxer_video"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="@dimen/text_medium_size"
            />
    </RelativeLayout>
    <lm.com.audioextract.view.CustomVideoView
        android:id="@+id/muxer_video_cv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_250">
    </lm.com.audioextract.view.CustomVideoView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/progress_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@color/colorBlack"/>
        </RelativeLayout>
        <ProgressBar
            android:id="@+id/muxer_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_5"
            android:maxHeight="@dimen/dp_20"
            android:minHeight="@dimen/dp_20"
            android:layout_marginTop="20dp"
            android:progressDrawable="@drawable/progress_red" />
    </LinearLayout>

    <TextView
        android:id="@+id/audio_file_name"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_medium_size"
        android:text="@string/string_record_path"
        android:textAllCaps="false"
        android:minHeight="@dimen/dp_40"/>
    <TextView
        android:id="@+id/muxer_file_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/string_file_name"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_100"
        android:layout_marginTop="@dimen/dp_50"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/muxer_video_ll"
                android:layout_width="@dimen/dp_50"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/muxer_video_ib"
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_50"
                    android:background="@drawable/muxer_video_btn"/>
                <TextView
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/string_muxer" />

            </LinearLayout>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/muxer_audio_record_ll"
                android:layout_width="@dimen/dp_50"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/muxer_audio_record_ib"
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_50"
                    android:background="@drawable/audio_record"/>
                <TextView
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/string_record" />

            </LinearLayout>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/video_play_ll"
                android:layout_width="@dimen/dp_50"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/video_play_ib"
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_50"
                    android:background="@drawable/icon_muxer_audiovideo"/>
                <TextView
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/string_video_test" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>



</LinearLayout>