<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/dp_5"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="@dimen/dp_5">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RelativeLayout
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_width="@dimen/dp_80"
                android:layout_height="@dimen/dp_80">

                <ImageView
                    android:id="@+id/videoThumb"
                    android:layout_width="@dimen/dp_60"
                    android:layout_height="@dimen/dp_60"
                    android:layout_centerInParent="true"/>
                <ImageButton
                    android:id="@+id/videobtn"
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_30"
                    android:background="@drawable/icon_video_tip"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>
            <LinearLayout
                android:layout_margin="@dimen/dp_5"
                android:layout_width="@dimen/dp_200"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/videoname"
                    android:layout_width="match_parent"
                    android:gravity="center_vertical|start"
                    android:textColor="@color/white"
                    android:layout_height="@dimen/dp_40" />
                <TextView
                    android:id="@+id/videoduration"
                    android:layout_width="match_parent"
                    android:gravity="center_vertical|start"
                    android:textColor="@color/white"
                    android:layout_height="@dimen/dp_40" />
            </LinearLayout>
            <RelativeLayout
                android:layout_width="@dimen/dp_50"
                android:layout_marginEnd="@dimen/dp_20"
                android:layout_height="match_parent"
                >
                <LinearLayout
                    android:id="@+id/extract_audio_ll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">
                    <ImageButton
                        android:id="@+id/extract_audio_ib"
                        android:layout_width="@dimen/dp_50"
                        android:layout_height="@dimen/dp_50"
                        android:background="@drawable/icon_extract_sel"
                        />
                    <TextView
                        android:id="@+id/extract_audio_tv"
                        android:layout_width="@dimen/dp_50"
                        android:gravity="center"
                        android:layout_height="@dimen/dp_20"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_small_size"
                        android:text="@string/string_extract"/>
                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <RelativeLayout
        android:id="@+id/ry_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:visibility="gone"
        android:clipChildren="false">

        <lm.com.audioextract.view.CustomViewPager
            android:id="@+id/action_vp"
            android:layout_width="@dimen/dp_80"
            android:layout_height="@dimen/dp_60"
            android:layout_centerInParent="true"
            android:layout_marginLeft="120dp"
            android:layout_marginRight="120dp"
            />
    </RelativeLayout>
    <android.support.v7.widget.CardView
        android:id="@+id/video_aciton_ll"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:visibility="gone"
        app:cardBackgroundColor="@color/colorBlack"
        app:cardCornerRadius="@dimen/dp_5">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RelativeLayout
                android:id="@+id/extract_audio_rl"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/get_audio"
                    android:layout_width="@dimen/dp_50"
                    android:gravity="center"
                    android:layout_height="@dimen/dp_40"
                    android:layout_centerInParent="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_small_size"
                    android:text="@string/get_audio"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/extract_video_rl"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/get_video"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_40"
                    android:layout_centerInParent="true"
                    android:textSize="@dimen/text_small_size"
                    android:text="@string/get_video"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/extract_audiopath_rl"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/open_audiopath"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_40"
                    android:layout_centerInParent="true"
                    android:textSize="@dimen/text_small_size"
                    android:text="@string/open_get_audiopath"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/extract_videopath_rl"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/open_videopath"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:drawable="@drawable/black_bg"
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_40"
                    android:layout_centerInParent="true"
                    android:textSize="@dimen/text_small_size"
                    android:text="@string/open_get_videopath"/>
            </RelativeLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>